[package]
name = "emojkey"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.7.7", features = ["nightly", "csr"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1.7"
schnorr_fun = "0.11.0"
rand = "0.8.5"
sha2 = "0.10"
hex = "0.4.3"
bitcoin = "0.32.5"
reqwasm = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qrcode = "0.14.1"
image = "0.25.5"
base64 = "0.22.1"
web-sys = "0.3.77"
js-sys = "0.3.77"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
panic = "abort"
incremental = false
